Fixed linter errors.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <meta http-equiv="X-UA-Compatible" content="IE=7">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Newsweek - News, Analysis, Politics, Business, Technology</title>
   <link rel="stylesheet" href="bootstrap-4.5.3-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bootstrap-4.5.3-dist/css/bootstrap.min.css"/>
@@ -74,7 +74,7 @@
             <a class="nav-link border-left text-decoration-none font-weight-bolder text-black p-lg-1  pl-xl-4 text-center" href="#">Weather</a>
           </li>
           <li class="nav-item search-nav">
-            <input type="text" placeholder="Search"></input>
+            <input type="text" placeholder="Search">
             <i class="fas fa-search"></i>
           </li>
         </ul>
@@ -117,7 +117,7 @@
             <span class="column-title p-3">FEATURED STORIES</span>
             <div class="card border-none">
               <img class="card-img-top px-3 py-0" src="https://d.newsweek.com/en/full/1654993/china-economy-retail.webp?w=790&f=f511cb19e2ef1deda5ef46ec5b17ce3d" alt="China Recovery">
-              <div class="card-body pt-0"t>
+              <div class="card-body pt-0">
                 <h5 class="card-title font-weight-bolder">China Outshines U.S. as First Major Economy to Recover From Pandemic</h5>
                 <p class="card-text text-grey">China's economy grew 4.9 percent between July and September compared to the same quarter last year, a little slower than expected but signaling a strong recovery.</p>
               </div>
@@ -449,9 +449,8 @@
             </div>
           </div>
       </div>
-      </div>
       <!--Three Column Section Ends Here-->
-      <div class="magazine container bg-white col-8 mt-1 mb-4">
+      <div class="magazine container bg-white col-12 mt-1 mb-4">
         <div class="row pt-4">
           <div class="col-3 col-xs-1">
             <div class="card">
@@ -468,7 +467,7 @@
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1649746/cover-qanon-banner.webp?w=466&h=311&l=48&t=40&q=90&f=661310f59c90b9a906e0bbfd608f8481" alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title d-flex mt-2">
-                  <div class="bg-danger mr-1 text-white">COVER</div> TECH & SCIENCE
+                  <span class="bg-danger mr-1 text-white">COVER</span> TECH & SCIENCE
                 </h4>
                 <p class="card-text font-weight-bolder text-black">
                   As QAnon Conspiracies Spread, Scientists Fight a Misinformation Pandemic
@@ -481,7 +480,7 @@
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1649197/per-pennsylvania-vote.webp?w=466&h=311&q=90&f=1f5ff97d10b0be7b9b7b655e3205cadc" alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title d-flex mt-2">
-                  <div class="bg-danger mr-1 text-white">PERISCOPE</div> POLITICS
+                  <span class="bg-danger mr-1 text-white">PERISCOPE</span> POLITICS
                 </h4>
                 <p class="card-text font-weight-bolder text-black">
                   If We Don't Win in Pennsylvania, 'We Are So Screwed,' Biden Insider Says
@@ -494,7 +493,7 @@
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1629912/taipei-taiwan-cityscape.webp?w=466&h=311&q=90&f=64a83a51974d9fc18e8404a93eba5fdf" alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title d-flex mt-2">
-                  <div class="bg-danger mr-1 text-white">PERISCOPE</div> OPINION
+                  <span class="bg-danger mr-1 text-white">PERISCOPE</span> OPINION
                 </h4>
                 <p class="card-text font-weight-bolder text-black">
                   Avoid War, Defend America, Recognize Taiwan
@@ -509,7 +508,7 @@
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1629920/offshore-islands-taiwan-strait.webp?w=466&h=311&q=90&f=070b1828435e50700505810a76d0cc7c" alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title d-flex mt-2">
-                  <div class="bg-danger mr-1 text-white">PERISCOPE</div> CULTURE
+                  <span class="bg-danger mr-1 text-white">PERISCOPE</span> CULTURE
                 </h4>
                 <p class="card-text font-weight-bolder text-black">
                   Don't Rush to Fully Normalize Relations With Taiwan
@@ -522,7 +521,7 @@
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1651905/parting-shot-trevor-noah.webp?w=466&h=311&l=45&t=48&q=90&f=4f96d72e1efcedb6d84efbe246c2e3d0" alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title d-flex mt-2">
-                  <div class="bg-danger mr-1 text-white">DOWNTIME</div> CULTURE
+                  <span class="bg-danger mr-1 text-white">DOWNTIME</span> CULTURE
                 </h4>
                 <p class="card-text font-weight-bolder text-black">
                   Trevor Noah Says the Left and the Right Can Agree on at Least One Thing
@@ -535,7 +534,7 @@
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1629912/taipei-taiwan-cityscape.webp?w=466&h=311&q=90&f=64a83a51974d9fc18e8404a93eba5fdf" alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title d-flex mt-2">
-                  <div class="bg-danger mr-1 text-white">PERISCOPE</div> OPINION
+                  <span class="bg-danger mr-1 text-white">PERISCOPE</span> OPINION
                 </h4>
                 <p class="card-text font-weight-bolder text-black">
                   Avoid War, Defend America, Recognize Taiwan
@@ -545,13 +544,13 @@
           </div>
         </div>
       </div>
-      <div class="container bg-white col-8 text-center border-bottom">
+      <div class="container bg-white col-12 text-center border-bottom">
         <div class="container d-flex d-flex justify-content-center text-center">
           <img class="bg-danger" src="favicon.png" alt="logo">
           <h5 class="font-weight-bolder ml-3 mt-2">EDITOR'S PICK</h5>
         </div>
       </div>
-      <div class="editorpick container bg-white col-lg-8 mt-1 mb-4 border-bottom">
+      <div class="editorpick container bg-white col-lg-12 mt-1 mb-4 border-bottom">
         <div class="row pt-4">
           <div class="col-3 col-md-6 mt-4">
             <div class="card border-none">
@@ -629,7 +628,7 @@
           </div>
         </div>
       </div>
-      <div class="us-section container bg-white col-lg-8 mt-2 mb-2 border-bottom">
+      <div class="us-section container bg-white col-lg-12 mt-2 mb-2 border-bottom">
         <div class="row">
           <div class="col-4 mt-4">
               <div class="card border-none">
@@ -671,7 +670,7 @@
       </div>
         </div>
       </div>
-      <div class="us-section container bg-white col-lg-8 mt-2 mb-2 border-bottom">
+      <div class="us-section container bg-white col-lg-12 mt-2 mb-2 border-bottom">
         <div class="row">
           <div class="col-4 mt-4">
               <div class="card border-none">
@@ -713,7 +712,7 @@
       </div>
         </div>
       </div>
-      <div class="us-section container bg-white col-lg-8 mt-2 mb-2 border-bottom">
+      <div class="us-section container bg-white col-lg-12 mt-2 mb-2 border-bottom">
         <div class="row">
           <div class="col-4 mt-4">
               <div class="card border-none">
@@ -755,7 +754,7 @@
       </div>
         </div>
       </div>
-      <div class="us-section container bg-white col-lg-8 mt-2 mb-2 border-bottom">
+      <div class="us-section container bg-white col-lg-12 mt-2 mb-2 border-bottom">
         <div class="row">
           <div class="col-4 mt-4">
               <div class="card border-none">
@@ -797,7 +796,7 @@
       </div>
         </div>
       </div>
-      <div class="us-section container bg-white col-lg-8 mt-2 mb-2 border-bottom">
+      <div class="us-section container bg-white col-lg-12 mt-2 mb-2 border-bottom">
         <div class="row">
           <div class="col-4 mt-4">
               <div class="card border-none">
@@ -839,7 +838,7 @@
       </div>
         </div>
       </div>
-      <div class="us-section container bg-white col-lg-8 mt-2 mb-2 border-bottom">
+      <div class="us-section container bg-white col-lg-12 mt-2 mb-2 border-bottom">
         <div class="row">
           <div class="col-4 mt-4">
               <div class="card border-none">
@@ -881,7 +880,7 @@
       </div>
         </div>
       </div>
-      <div class="container bg-white col-lg-8 max-width p-0">
+      <div class="container bg-white col-lg-12 max-width p-0">
         <div class="row bg-white">
           <div class="col-lg-8 bg-light">
             <div class="card mb-3 p-3">
@@ -927,7 +926,7 @@
         </div>
       </div>
     </main>
-    <footer class="container-fluid col-xl-8 col-lg-12 col-xs-12 max-width min-width-container nav-static p-0 bg-white">
+    <footer class="container-fluid col-xl-12 col-lg-12 col-xs-12 max-width min-width-container nav-static p-0 bg-white">
       <div class="col-lg-12 d-flex justify-content-space-between">
         <div class="d-flex">
           <a class="navbar-brand" href="https://www.newsweek.com/">
