--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Newsweek - News, Analysis, Politics, Business, Technology</title>
   <link rel="stylesheet" href="bootstrap-4.5.3-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bootstrap-4.5.3-dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="bootstrap-4.5.3-dist/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
