--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
       </div><!--Three Column Section Ends Here-->
       <div class="magazine container bg-white col-12 mt-1 mb-4">
         <div class="row pt-4">
-          <div class="col-12 col-xs-1">
+          <div class="col-12 col-lg-3 col-xs-1">
             <div class="card border-0">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1653518/cover-october-23-2020.webp?w=290&amp;h=387&amp;q=90&amp;f=b389f931e013092b40bde9c93666e8fb" alt="Book">
               <div class="card-block">
@@ -371,7 +371,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-xs-1 mt-4">
+          <div class="col-12 col-xs-1 col-lg-3 mt-4">
             <div class="card border-0">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1649746/cover-qanon-banner.webp?w=466&amp;h=311&amp;l=48&amp;t=40&amp;q=90&amp;f=661310f59c90b9a906e0bbfd608f8481" alt="Card image cap">
               <div class="card-block">
@@ -380,7 +380,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 mt-4">
+          <div class="col-12 col-lg-3 mt-4">
             <div class="card border-0">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1649197/per-pennsylvania-vote.webp?w=466&amp;h=311&amp;q=90&amp;f=1f5ff97d10b0be7b9b7b655e3205cadc" alt="Card image cap">
               <div class="card-block">
@@ -389,7 +389,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 mt-4">
+          <div class="col-12 col-lg-3 mt-4">
             <div class="card border-0">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1629912/taipei-taiwan-cityscape.webp?w=466&amp;h=311&amp;q=90&amp;f=64a83a51974d9fc18e8404a93eba5fdf" alt="Card image cap">
               <div class="card-block">
@@ -400,7 +400,7 @@
           </div>
         </div>
         <div class="row pt-4">
-          <div class="col-12 mt-2">
+          <div class="col-12 col-lg-3 mt-2">
             <div class="card border-0">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1629920/offshore-islands-taiwan-strait.webp?w=466&amp;h=311&amp;q=90&amp;f=070b1828435e50700505810a76d0cc7c" alt="Card image cap">
               <div class="card-block">
@@ -409,7 +409,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 mt-2">
+          <div class="col-12 col-lg-3 mt-2">
             <div class="card border-0">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1651905/parting-shot-trevor-noah.webp?w=466&amp;h=311&amp;l=45&amp;t=48&amp;q=90&amp;f=4f96d72e1efcedb6d84efbe246c2e3d0" alt="Card image cap">
               <div class="card-block">
@@ -418,7 +418,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 mt-2">
+          <div class="col-12 col-lg-3 mt-2">
             <div class="card border-0">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1629912/taipei-taiwan-cityscape.webp?w=466&amp;h=311&amp;q=90&amp;f=64a83a51974d9fc18e8404a93eba5fdf" alt="Card image cap">
               <div class="card-block">
