Completed footer for mobile.

--- a/index.html
+++ b/index.html
@@ -818,27 +818,27 @@
         </div>
         <ul class="col-xl-6 col-md-3 footer-icons pt-xl-5 pt-md-4 d-flex justify-content-end">
           <li class="facebook">
-            <a href="#" class="text-secondary px-xl-2 px-md-2 px-lg-2">
+            <a href="#" class="text-secondary px-2 px-xl-2 px-md-2 px-lg-2">
               <i class="fab fa-facebook-square"></i>
             </a>
           </li>
           <li>
-            <a href="#" class="twitter text-secondary px-xl-2 px-lg-2 px-md-2">
+            <a href="#" class="twitter text-secondary px-2 px-xl-2 px-lg-2 px-md-2">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
           <li>
-            <a href="#" class="instagram text-secondary px-xl-2 px-lg-2 px-md-2">
+            <a href="#" class="instagram text-secondary px-2 px-xl-2 px-lg-2 px-md-2">
               <i class="fab fa-instagram"></i>
             </a>
           </li>
           <li>
-            <a href="#" class="tumblr text-secondary px-xl-2 px-lg-2 px-md-2">
+            <a href="#" class="tumblr text-secondary px-2 px-xl-2 px-lg-2 px-md-2">
               <i class="fab fa-tumblr"></i>
             </a>
           </li>
           <li>
-            <a href="#" class="linkedin text-secondary px-xl-2 px-lg-2 px-md-2">
+            <a href="#" class="linkedin text-secondary px-2 px-xl-2 px-lg-2 px-md-2">
               <i class="fab fa-linkedin-in"></i>
             </a>
           </li>
@@ -848,19 +848,19 @@
         <p class="pl-xl-3 pl-md-3 pl-3">Editions:</p>
         <ul class="d-flex pl-xl-2 pl-md-2 pl-2">
           <li>
-            <a class="text-secondary px-xl-2 px-md-2 px-2" href="#">U.S. Edition</a>
+            <a class="text-secondary px-xl-2 px-md-2 px-1" href="#">U.S. Edition</a>
           </li>
           <li>
-            <a class="text-secondary px-xl-2 px-md-2 px-2 border-left" href="#">日本</a>
+            <a class="text-secondary px-xl-2 px-md-2 px-1 border-left" href="#">日本</a>
           </li>
           <li>
-            <a class="text-secondary px-xl-2 px-md-2 px-2 border-left" href="#">Pakistan</a>
+            <a class="text-secondary px-xl-2 px-md-2 px-1 border-left" href="#">Pakistan</a>
           </li>
           <li>
-            <a class="text-secondary px-xl-2 px-md-2 px-2 border-left" href="#">Polska</a>
+            <a class="text-secondary px-xl-2 px-md-2 px-1 border-left" href="#">Polska</a>
           </li>
           <li>
-            <a class="text-secondary px-xl-2 px-md-2 px-2 border-left" href="#">România</a>
+            <a class="text-secondary px-xl-2 px-md-2 px-1 border-left" href="#">România</a>
           </li>
         </ul>
       </div>
