Made improvements requested by the TSE.

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         <div class="col-xs-3 col-xs-5 col-sm-5 col-md-5 col-lg-4 p-0 logo-link">
           <a class="navbar-brand" href="https://www.newsweek.com/"><img class="img-fluid shadow" id="newsweek-logo" src="https://upload.wikimedia.org/wikipedia/commons/d/db/Newsweek_Logo.svg" alt="Newsweek Logo"></a>
         </div>
-        <div class="user-icon d-md-none d-lg-none col-xs-1">
+        <div class="user-icon d-md-none d-lg-none col-xs-1 ml-4">
           <svg width="3em" height="3em" viewbox="0 0 16 16" class="bi bi-person-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path></svg>
         </div>
-        <div class="login-subscribe col-xs-4">
-          <a class="d-inline-block pr-3" href="#">LOGIN</a> <button type="button" class="btn btn-warning rounded-pill">SUBSCRIBE</button>
+        <div class="login-subscribe col-xs-4 ml-4">
+          <a class="d-md-inline-block" href="#">LOGIN</a> <button type="button" class="btn btn-warning rounded-pill">SUBSCRIBE</button>
         </div>
         <div class="burger-menu d-lg-none col-xs-1">
-          <svg width="3em" height="3em" viewbox="0 0 16 16" class="bi bi-list" fill="white" xmlns="http://www.w3.org/2000/svg">
+          <svg width="2.8em" height="2.4em" viewbox="0 0 16 16" class="bi bi-list" fill="white" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"></path></svg>
         </div>
       </nav>
@@ -366,7 +366,7 @@
       </div><!--Three Column Section Ends Here-->
       <div class="magazine container bg-white col-12 mt-1 mb-4">
         <div class="row pt-4">
-          <div class="col-12 col-lg-3 col-xs-1">
+          <div class="col-12 col-lg-3 col-md-3 col-xs-1">
             <div class="card border-0">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1653518/cover-october-23-2020.webp?w=290&amp;h=387&amp;q=90&amp;f=b389f931e013092b40bde9c93666e8fb" alt="Book">
               <div class="card-block">
@@ -374,7 +374,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-xs-1 col-lg-3 mt-4">
+          <div class="col-12 col-xs-1 col-lg-3 col-md-3 mt-4">
             <div class="card border-0">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1649746/cover-qanon-banner.webp?w=466&amp;h=311&amp;l=48&amp;t=40&amp;q=90&amp;f=661310f59c90b9a906e0bbfd608f8481" alt="Card image cap">
               <div class="card-block">
@@ -383,7 +383,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-3 mt-4">
+          <div class="col-12 col-lg-3 col-md-3 mt-4">
             <div class="card border-0">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1649197/per-pennsylvania-vote.webp?w=466&amp;h=311&amp;q=90&amp;f=1f5ff97d10b0be7b9b7b655e3205cadc" alt="Card image cap">
               <div class="card-block">
@@ -392,7 +392,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-3 mt-4">
+          <div class="col-12 col-lg-3 col-md-3 mt-4">
             <div class="card border-0">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1629912/taipei-taiwan-cityscape.webp?w=466&amp;h=311&amp;q=90&amp;f=64a83a51974d9fc18e8404a93eba5fdf" alt="Card image cap">
               <div class="card-block">
@@ -403,7 +403,7 @@
           </div>
         </div>
         <div class="row pt-4">
-          <div class="col-12 col-lg-3 mt-2">
+          <div class="col-12 col-lg-3 col-md-3 mt-2">
             <div class="card border-0">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1629920/offshore-islands-taiwan-strait.webp?w=466&amp;h=311&amp;q=90&amp;f=070b1828435e50700505810a76d0cc7c" alt="Card image cap">
               <div class="card-block">
@@ -412,7 +412,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-3 mt-2">
+          <div class="col-12 col-lg-3 col-md-3 mt-2">
             <div class="card border-0">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1651905/parting-shot-trevor-noah.webp?w=466&amp;h=311&amp;l=45&amp;t=48&amp;q=90&amp;f=4f96d72e1efcedb6d84efbe246c2e3d0" alt="Card image cap">
               <div class="card-block">
@@ -421,7 +421,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-3 mt-2">
+          <div class="col-12 col-lg-3 col-md-3 mt-2">
             <div class="card border-0">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1629912/taipei-taiwan-cityscape.webp?w=466&amp;h=311&amp;q=90&amp;f=64a83a51974d9fc18e8404a93eba5fdf" alt="Card image cap">
               <div class="card-block">
@@ -776,34 +776,34 @@
             <div class="col-12 col-md-12 col-lg-8 px-2">
               <h5 class="card-title text-danger pl-lg-2">SUBSCRIBE</h5>
               <div class="card mb-3 p-2 border-0 bg-light">
-                <div class="row no-gutter p-lg-4">
-                  <div class="col-md-4 position-relative">
+                <div class="row no-gutter p-lg-4 position-relative">
+                  <div class="col-md-4 position-relative o-images">
                     <img src="https://d.newsweek.com/en/full/1643943/cover-october-09-16-2020.jpg?w=170&q=95&f=f8144d83a028a40fe7ea6a5ed615ded7" class="card-img item-top-img" alt="...">
                     <img src="https://d.newsweek.com/en/full/1656193/cover-october-30-2020.jpg?w=170&q=95&f=be2e90c46dd8a717368f947b7d46d40f" class="card-img position-absolute bottom-overlapped" alt="...">
                   </div>
-                  <div class="col-md-8">
-                    <div class="card-body d-lg-flex flex-column justify-content-end">
+                  <div class="col-md-8 pb-6">
+                    <div class="card-body">
                       <h4 class="font-weight-bolder">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</h4>
-                      <p class="card-text">All Access + Weekly Delivery. Choose A Membership That's Perfect for You!</p><a href="#" class="btn btn-danger rounded col-lg-4">SUBSCRIBE</a>
+                      <p class="card-text">All Access + Weekly Delivery. Choose A Membership That's Perfect for You!</p><a href="#" class="btn btn-danger rounded col-lg-4 font-weight-bolder">SUBSCRIBE</a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-12 col-lg-4">
+            <div class="col-12 col-md-12 col-lg-4 pr-lg-0">
               <h5 class="card-title text-danger">NEWSLETTER</h5>
               <div class="card p-3 pb-xl-2 border-0">
                 <div class="row no-gutter p-0 border-0">
-                  <div class="col-md-4 newsletter-bg">
+                  <div class="col-md-4 px-lg-0 bg-newsletter">
                   </div>
-                  <div class="col-md-8 p-2">
-                    <div class="card-body">
-                      <h5 class="card-title">The Starting 5</h5>
+                  <div class="col-md-8 p-2 pl-lg-0 py-lg-0">
+                    <div class="card-body py-lg-0">
+                      <h3 class="font-weight-bolder">The Starting 5</h3>
                       <p class="card-text">See why nearly a quarter of a million subscribers begin their day with the Starting 5.</p>
                       <form>
-                        <input type="email" placeholder="Email Address" class="col-12">
+                        <input type="email" placeholder="Email Address" class="col-12 mb-2 mb-md-1 mb-lg-1">
                         <button type="button" class="btn-danger border-0 rounded col-12 mt-lg-2">
-                          <span class="text-black font-weight-bolder">FREE SIGN UP</span>
+                          <span class="text-white font-weight-bolder">FREE SIGN UP</span>
                         </button>
                       </form>
                     </div>
@@ -823,7 +823,7 @@
             <g>
               <path class="st0" d="M58.7,10.8h-5.6v48.3H42.8l-25.1-33v22.1h5.6v10.8H0V48.3h5.6V10.8H0V0h17.6L41,30.7V10.8h-5.6V0h23.2 L58.7,10.8L58.7,10.8z M95.8,38c0,0.9,0,1.8-0.1,2.7H70.3c-0.7,8.2,2.4,10.6,7.1,10.6c3.9,0,6.9-2.6,6.9-6.6h11 c-0.3,7.2-4,15.4-18.5,15.4c-14.5,0-21.3-10.5-21.3-22.1c0-10.5,7-21.6,21-21.6C89.9,16.3,95.8,25.6,95.8,38 M159,27.3h-3.7 l-9.4,31.8h-12.5l-5.9-17.4l-5.3,17.4h-12.8L98.8,27.4h-3.7V16.6h22.1v10.7h-5.6l5.8,16.9l7.6-27.6h6.8l9.3,27.6l5-16.9h-5.6V16.6 H159L159,27.3L159,27.3z M174.5,27.8c0,1.5,1.2,2.5,5.4,3.9l6,2c5.5,1.8,12.1,5.9,12.1,13.4c0,8.8-6.6,13-14.7,13 c-6.5,0-11.5-3.2-12.9-4.6V59h-10.8V44.4h10.6c0.3,4.8,4.6,7.3,8.5,7.3c3.2,0,4.7-1.4,4.7-3c0-2-1.2-3.1-6.5-4.8l-5.3-1.8 c-5.4-1.7-11.4-5.7-11.4-12.8c0-8.7,7.7-13.1,14.3-13.1c6.8,0,10.1,1.9,11.8,3.8l0.1-3.3H197v13.3h-11.2c-0.2-3.6-3.7-5.2-7.2-5.2 C175.8,24.8,174.5,26.1,174.5,27.8 M262.8,27.3h-3.7l-9.4,31.8h-12.5l-5.9-17.4L226,59.1h-12.8l-10.6-31.7h-3.7V16.6h22.1v10.7 h-5.6l5.8,16.9l7.6-27.6h6.8l9.3,27.7l5-16.9h-5.6V16.6h18.5V27.3z M302,37.9c0,0.9,0,1.8-0.1,2.7h-25.4 c-0.7,8.2,2.4,10.6,7.1,10.6c3.9,0,6.9-2.6,6.9-6.6h11c-0.3,7.2-4,15.4-18.5,15.4c-14.5,0-21.3-10.5-21.3-22.1 c0-10.5,7-21.6,21-21.6C296.1,16.2,302,25.5,302,37.9 M343.9,37.8c0,0.9,0,1.8-0.1,2.7h-25.4c-0.7,8.2,2.4,10.6,7.1,10.6 c3.9,0,6.9-2.6,6.9-6.6h11c-0.3,7.2-4,15.4-18.5,15.4c-14.5,0-21.3-10.5-21.3-22.1c0-10.5,7-21.6,21-21.6 C338,16.1,343.9,25.4,343.9,37.8 M389.9,59h-12.8l-13.3-17.3l-4.3,3.2v3.4h3.8V59h-19.6V48.3h3.7V10.6h-5.6V0h17.8v33.9l8.9-6.5 h-5.6V16.6h23.9v10.8h-3.7l-9.3,7l10.7,13.9h5.6L389.9,59L389.9,59z M395.6,56.6c0,0.5-0.1,0.9-0.4,1.2c-0.2,0.4-0.5,0.7-0.9,0.9 c-0.4,0.2-0.8,0.4-1.3,0.4c-0.5,0-0.9-0.1-1.2-0.4c-0.4-0.2-0.7-0.5-0.9-0.9c-0.2-0.4-0.4-0.8-0.4-1.2c0-0.5,0.1-0.9,0.4-1.2 c0.2-0.4,0.5-0.7,0.9-0.9c0.4-0.2,0.8-0.4,1.2-0.4c0.5,0,0.9,0.1,1.3,0.4c0.4,0.2,0.7,0.5,0.9,0.9 C395.5,55.8,395.6,56.2,395.6,56.6 M394.6,58c0.4-0.4,0.6-0.9,0.6-1.4c0-0.6-0.2-1-0.6-1.4s-0.9-0.6-1.4-0.6s-1,0.2-1.4,0.6 c-0.4,0.4-0.6,0.9-0.6,1.4c0,0.6,0.2,1,0.6,1.4c0.4,0.4,0.9,0.6,1.4,0.6S394.2,58.4,394.6,58 M393.6,56.8c0.1,0.1,0.2,0.1,0.2,0.1 c0.1,0.1,0.2,0.2,0.2,0.3c0,0,0.2,0.3,0.4,0.8h-0.8c-0.3-0.5-0.4-0.8-0.5-0.9c-0.1-0.1-0.2-0.2-0.3-0.2c0,0-0.1,0-0.1,0v1.1h-0.6 v-2.6h1.2c0.4,0,0.6,0.1,0.7,0.2c0.2,0.2,0.2,0.3,0.2,0.6c0,0.2-0.1,0.4-0.2,0.5C393.9,56.6,393.8,56.7,393.6,56.8 M393.5,56.3 c0.1-0.1,0.1-0.2,0.1-0.3s-0.1-0.2-0.1-0.3c-0.1-0.1-0.2-0.1-0.4-0.1h-0.3v0.7h0.3C393.3,56.4,393.4,56.4,393.5,56.3 M318.4,33.5 h13.9c0-6-3.9-8.4-6.8-8.4C322.1,25.2,318.6,27.9,318.4,33.5 M276.5,33.6h13.9c0-6-3.9-8.4-6.8-8.4C280.3,25.2,276.8,28,276.5,33.6 M70.3,33.7h13.9c0-6-3.9-8.4-6.8-8.4C74.1,25.3,70.6,28.1,70.3,33.7"></path>
             </g></svg></a>
-            <p class="text-secondary trademark align-self-md-end align-self-lg-end m-xl-2">© 2020 NEWSWEEK DIGITAL LLC</p>
+            <p class="text-secondary trademark align-self-md-end align-self-lg-end m-xl-2 mt-xl-2">© 2020 NEWSWEEK DIGITAL LLC</p>
           </div>
         </div>
         <ul class="col-xl-6 col-md-3 footer-icons pt-xl-5 pt-md-4 d-flex d-md-flex d-lg-flex justifiy-content-start justify-content-md-end justify-content-lg-end">
